
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [PORTAL] [SELF_SERVICE] Disabled workflows listed
- [MONGODB] Allow clusters with more than 7 nodes
- [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations


## [2.25.0]
### Added
- [API_PARSER] [CISCO_MERAKI] Add support for configuration change logs
### Changed
- [FILEBEAT] Separate building configurations and restarting service
### Fixed
- [API_PARSER] [BEYONDTRUST_PRA] Catch invalid lines
- [FRONTEND] Hot-disable a collector manually


## [2.24.1] - 2025-04-17
### Fixed
- [API_PARSER] [CORTEX_XDR] Update time when there is no log during one day


## [2.24.0] - 2025-04-14
### Added
- [API_PARSER] [PERCEPTION_POINT_XRAY] New collector
- [API_PARSER] [EXTRAHOP] New collector
- [FRONTEND] [RSYSLOG] New health check option
### Changed
- [DEPENDENCIES]
  - cryptography 43.0.1 -> 44.0.2
  - django 4.2.18 -> 4.2.20
  - djongo 1.3.7 -> 1.3.7.2
  - gunicorn 22.0.0 -> 23.0.0
  - jinja2 3.1.3 -> 3.1.6
  - sqlparse 0.4.4 -> 0.5.3
### Fixed
- [API_PARSER] [WAF_CLOUDFLARE] Avoid querying the API with data from more than a week ago
- [API_PARSER] [CISCO_DUO] Increment time pointer by 1s at the end of a run to avoid duplicates
- [API_PARSER] [TRENDMICRO_VISIONONE] Add retries and check for total count
- [GUI] [FRONTEND] Don't show Redis mode when unnecessary


## [2.23.0] - 2025-03-28
### Added
- [SYSTEM] [PATHS] Variabilize all system paths and allow to configure them from settings
- [SYSTEM] [SETTINGS] Allow to configure project with django-environ
- [TESTS] [SYSTEM] Implement Network test cases
- [TESTS] [WORKFLOW] Implement Workflow test cases
- [API_PARSER] [GATEWATCHER_ALERTS] Add 'host' field in json logs (requested url's domain)
- [API_PARSER] [ARMIS_CENTRIX] New collector for Armis Centrix EDR (Alerts & Activity)