@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [PORTAL] [SELF_SERVICE] Disabled workflows listed
 - [MONGODB] Allow clusters with more than 7 nodes
 - [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations
+- [GUI] [RSYSLOG] Bring more details on GUI when configuration builds fail
 
 
 ## [2.25.0]
